Div Creator Created a function that creates divs Attempted to tweak the css so that the newly created divs have visible borders Still need to fix

--- a/style.css
+++ b/style.css
@@ -5,11 +5,10 @@
 
 .etchSquare {
   display: flex;
-  width: 43.75px;
-  height: 43.75px;
   flex-wrap: wrap;
   background-color: white;
-  border: darkblue 2px;
+  border: darkblue 3px;
+  gap: 0px;
 
 }
 
